# lyraW4AFp8

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
common/: data_utils.py  utils.py
csrc/: kernel_extension.cc
csrc/extensions/: scalar_type.hpp  vllm_collective_builder.cuh
csrc/machete/: machete_collective_builder.cuh  machete_mainloop.cuh  machete_mm_kernel.cuh  machete_mm_launcher.cuh  machete_prepack_kernel.cuh  machete_prepack_launcher.cuh  machete_prepacked_layout.cuh  machete_pytorch.cu  sm90_gemm_tma_warpspecialized_cooperative_machete.hpp
csrc/moe_kernel/: moe_align_kernel.cu
fused_moe/: __init__.py  fused_moe.py
include/: kernel_ops.h  utils.h
python/lyra_w4afp8/: __init__.py  kernels.py
scripts/: generate_kernel.py
tests/: test_fused_moe.py  test_machete_mm.py
tune/: benchmark_machete_mm.py  tuning_fused_moe.py  tuning_machete_mm.py  utils.py
