[build-system]
requires = [
  "scikit-build-core>=0.10",
  "torch>=2.7.1",
  "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "lyra-w4afp8"
version = "0.0.1"
description = "Kernel Library for W4afp8"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Environment :: GPU :: NVIDIA CUDA"
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/TMElyralab/lyraW4AFp8"
"Bug Tracker" = "https://github.com/TMElyralab/lyraW4AFp8/issues"

[tool.wheel]
exclude = [
  "dist*",
  "tests*",
]

[tool.scikit-build]
cmake.build-type = "Release"
minimum-version = "build-system.requires"

wheel.py-api = "cp39"
wheel.license-files = []
wheel.packages = ["python/lyra_w4afp8"]
